--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~19.1.10",
+    "@types/react-native": "^0.73.0",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.30",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "typescript": "~5.9.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
