--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.4.1",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/stack": "^7.6.13",
     "@types/react": "~19.1.10",
     "@types/react-native": "^0.73.0",
     "dotenv": "^17.2.3",
     "expo": "~54.0.30",
+    "expo-font": "~14.0.10",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-svg-transformer": "^1.5.2",
+    "react-native-video": "^6.18.0",
     "typescript": "~5.9.2"
   },
   "devDependencies": {
