--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,22 +16,29 @@
     "@react-navigation/stack": "^7.6.13",
     "@types/react": "~19.1.10",
     "@types/react-native": "^0.73.0",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "expo": "~54.0.30",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-navigation-bar": "~5.0.10",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-nitro-modules": "^0.31.10",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.2",
     "react-native-video": "^6.18.0",
+    "react-native-video-controls": "^2.8.1",
     "typescript": "~5.9.2"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
