--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "@types/react": "~19.1.10",
     "@types/react-native": "^0.73.0",
     "axios": "^1.13.2",
-    "dotenv": "^17.2.3",
     "expo": "~54.0.30",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-navigation-bar": "~5.0.10",
+    "expo-notifications": "~0.32.15",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
@@ -34,11 +36,9 @@
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.2",
     "react-native-video": "^6.18.0",
-    "react-native-video-controls": "^2.8.1",
     "typescript": "~5.9.2"
   },
   "devDependencies": {
-    "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
